syntax = "proto3";

package kong.admin.service.v1;

import "google/api/annotations.proto";

option go_package = "github.com/kong/koko/internal/gen/kong/admin/service/v1;v1";

service MetaService {
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {
    option (google.api.http) = {get: "/v1/meta/version"};
  }
}

message GetVersionRequest {}

message GetVersionResponse {
  string version = 1;
}
